# agent-gate

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agentpermit/: __init__.py  audit.py  cli.py  decision.py  policy.py  risk.py
examples/: policy.yaml
tests/: test_audit.py  test_cli.py  test_policy.py  test_risk.py
